# herokill

./: CMakeLists.txt  README.md  build.sh  herokill.drawio  未命名绘图.drawio
.github/workflows/: ci.yml  cicd.yml
docs/: design.md  herokill.drawio  未命名绘图.drawio
src/: CMakeLists.txt  Card.cpp  Card.h  CardPool.cpp  CardPool.h  GameRule.cpp  GameRule.h  Player.cpp  Player.h  Room.cpp  Room.h  Singleton.h  a.out  main.cpp
